--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ lsi: false
 pygments: true
 pagination: 20
 exclude: [Rakefile, README.md, lib, temp, src]
+permalink: /blog/:categories/:year/:month/:day/:title.html
+
+theme: normal
+brand: Michael Collins on GitHub
