I built out more of the website structure. I created the first blog post. I added integration with Disqus for comments on posts.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 safe: true
 lsi: false
 pygments: true
-pagination: 20
+paginate: 20
 exclude: [Rakefile, README.md, lib, temp, src]
 permalink: /blog/:categories/:year/:month/:day/:title.html
 
