I created JavaScript for the home page and moved the events to an external data file.
I created the homepage.js module containing the JavaScript code for the
home page. I removed the static list of events and created the
events.json data file that will be loaded by the homepage.js module
using jQuery AJAX. I created the events.handlebars template to render
the list of events.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ safe: true
 lsi: false
 pygments: true
 paginate: 20
-exclude: [Rakefile, README.md, lib, temp, src]
+exclude: [Rakefile, README.md, lib, _temp, src]
 permalink: /blog/:categories/:year/:month/:day/:title.html
 
 theme: normal
