--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = git://github.com/yui/yuicompressor.git
 [submodule "lib/font-awesome"]
 	path = lib/font-awesome
-	url = git://github.com/FortAwesome/Font-Awesome.git
+	url = https://github.com/FortAwesome/Font-Awesome.git
