--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ lsi: false
 pygments: true
 paginate: 20
 exclude: [Rakefile, README.md, lib, _temp, src]
-permalink: /blog/:categories/:year/:month/:day/:title.html
+permalink: /blog/:year/:month/:day/:title.html
 
 theme: normal
 brand: The Imaginary Road
