I added Reveal.js 2.4.0 as a submodule.
I added Reveal.js as a submodule to the project. I checked out the
2.4.0 release of Reveal.js.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/font-awesome"]
 	path = lib/font-awesome
 	url = git://github.com/FortAwesome/Font-Awesome.git
+[submodule "lib/reveal.js"]
+	path = lib/reveal.js
+	url = git@github.com:hakimel/reveal.js.git
