I created the Presentations page for the website.
I integrated Reveal.js into the website. I created the index page for
the presentations. I started to create the Using OutputDebugString
presentation.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 safe: true
 lsi: false
 pygments: true
-exclude: [Rakefile, README.md, lib, _temp, src]
+exclude: [Rakefile, README.md, ./lib, _temp, src]
+include: [./css/lib]
 permalink: /blog/:year/:month/:day/:title.html
 
 paginate: 10
