--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/reveal.js"]
 	path = lib/reveal.js
 	url = git@github.com:hakimel/reveal.js.git
+[submodule "lib/head.js"]
+	path = lib/head.js
+	url = git://github.com/headjs/headjs.git
