I fixed the URL for the Reveal.js submodule.
I fixed the URL for the Reveal.js repository that I used as a
submodule. I created the submodule using the wrong URL and GitHub Pages
failed to build the site.

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = git://github.com/FortAwesome/Font-Awesome.git
 [submodule "lib/reveal.js"]
 	path = lib/reveal.js
-	url = git@github.com:hakimel/reveal.js.git
+	url = git://github.com/hakimel/reveal.js.git
 [submodule "lib/head.js"]
 	path = lib/head.js
 	url = git://github.com/headjs/headjs.git
