I integrated the Cerulean theme from Bootswatch into the normal website theme.

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ pygments: true
 exclude: [Rakefile, README.md, ./lib, _temp, src]
 include: [./css/lib]
 permalink: /blog/:year/:month/:day/:title.html
+markdown: redcarpet
 
 paginate: 10
 
