Upgrade to Bootstrap 3.0.0.
- I changed the URL of the Bootstrap repository for the submodule.

- I updated the Bootstrap submodule to 3.0.0.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/twitter-bootstrap"]
 	path = lib/twitter-bootstrap
-	url = git://github.com/twitter/bootstrap.git
+	url = https://github.com/twbs/bootstrap.git
 [submodule "lib/yuicompressor"]
 	path = lib/yuicompressor
 	url = git://github.com/yui/yuicompressor.git
