--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 safe: true
 lsi: false
 pygments: true
-exclude: [Rakefile, README.md, ./lib, _temp, src]
+exclude: [Rakefile, README.md, ./lib, _temp, src, server]
 include: [./css/lib]
 permalink: /blog/:year/:month/:day/:title.html
 markdown: redcarpet
