Implement blog pagination and fix post layout
- I fixed the layout for posts and the blog.

- I moved pagination to the /blog/ directory.

- I revised the list of categories.

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ permalink: /blog/:year/:month/:day/:title.html
 markdown: redcarpet
 
 paginate: 10
+paginate_path: "blog/page:num"
 
 theme: normal
 brand: The Imaginary Road
