--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,14 @@ defaults:
       path: ""
     values:
       theme: normal
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      author: "Michael F. Collins, III"
+      author_first_name: "Michael"
+      author_last_name: "Collins"
+      author_gender: "male"
+      twitter_creator: "mfcollins3"
