--- a/_config.yml
+++ b/_config.yml
@@ -30,3 +30,14 @@ defaults:
       author_last_name: "Collins"
       author_gender: "male"
       twitter_creator: "mfcollins3"
+  -
+    scope:
+      path: ""
+      type: "drafts"
+    values:
+      layout: "post"
+      author: "Michael F. Collins, III"
+      author_first_name: "Michael"
+      author_last_name: "Collins"
+      author_gender: "male"
+      twitter_creator: "mfcollins3"      
