Deprecate Theme Files
I renamed the _includes and _layout subdirectories to remove them from
use by Jekyll as I design the new theme and move the layout files to the
new theme repository.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 remote_theme: mfcollins3/normal-blog-theme
 
+google_analytics_id: UA-62548623-1
+
 # GitHub Defaults
 #
 # The following settings are set by GitHub and cannot be changed.
