--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,17 @@ remote_theme: mfcollins3/normal-blog-theme
 
 google_analytics_id: UA-62548623-1
 
+title: The Imaginary Road
+description: "The personal website of Michael F. Collins, III, where I share information about myself, experimenting with new technologies, and building software solutions in both my personal and professional life."
+url: "https://www.michaelfcollins3.me"
+
+author:
+  name: Michael F. Collins, III
+  email: michael.collins@naked.software
+  uri: https://www.michaelfcollins3.me
+
+rss_feed: /rss.xml
+
 # GitHub Defaults
 #
 # The following settings are set by GitHub and cannot be changed.
@@ -25,13 +36,11 @@ kramdown:
   input: GFM
   hard_wrap: false
 
-exclude: [README.md, Gemfile, Gemfile.lock]
+exclude: [README.md, Gemfile, Gemfile.lock, update.sh, build.sh, serve.sh]
 permalink: /blog/:year/:month/:day/:title.html
 
 paginate: 10
 paginate_path: "blog/page:num/"
-
-brand: The Imaginary Road
 
 excerpt_separator: <!--more-->
 
